; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_mptcp_subr.c_mptcp_freeq.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_mptcp_subr.c_mptcp_freeq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mptcb = type { i64, i32 }
%struct.tseg_qent = type { i32 }

@tqe_q = common dso_local global i32 0, align 4
@tcp_reass_zone = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mptcp_freeq(%struct.mptcb* %0) #0 {
  %2 = alloca %struct.mptcb*, align 8
  %3 = alloca %struct.tseg_qent*, align 8
  %4 = alloca i32, align 4
  store %struct.mptcb* %0, %struct.mptcb** %2, align 8
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %10, %1
  %6 = load %struct.mptcb*, %struct.mptcb** %2, align 8
  %7 = getelementptr inbounds %struct.mptcb, %struct.mptcb* %6, i32 0, i32 1
  %8 = call %struct.tseg_qent* @LIST_FIRST(i32* %7)
  store %struct.tseg_qent* %8, %struct.tseg_qent** %3, align 8
  %9 = icmp ne %struct.tseg_qent* %8, null
  br i1 %9, label %10, label %21

10:                                               ; preds = %5
  %11 = load %struct.tseg_qent*, %struct.tseg_qent** %3, align 8
  %12 = load i32, i32* @tqe_q, align 4
  %13 = call i32 @LIST_REMOVE(%struct.tseg_qent* %11, i32 %12)
  %14 = load %struct.tseg_qent*, %struct.tseg_qent** %3, align 8
  %15 = getelementptr inbounds %struct.tseg_qent, %struct.tseg_qent* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @m_freem(i32 %16)
  %18 = load i32, i32* @tcp_reass_zone, align 4
  %19 = load %struct.tseg_qent*, %struct.tseg_qent** %3, align 8
  %20 = call i32 @zfree(i32 %18, %struct.tseg_qent* %19)
  store i32 1, i32* %4, align 4
  br label %5

21:                                               ; preds = %5
  %22 = load %struct.mptcb*, %struct.mptcb** %2, align 8
  %23 = getelementptr inbounds %struct.mptcb, %struct.mptcb* %22, i32 0, i32 0
  store i64 0, i64* %23, align 8
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local %struct.tseg_qent* @LIST_FIRST(i32*) #1

declare dso_local i32 @LIST_REMOVE(%struct.tseg_qent*, i32) #1

declare dso_local i32 @m_freem(i32) #1

declare dso_local i32 @zfree(i32, %struct.tseg_qent*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
